# jai

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  business_analyst.md  config.py  custom_gpt_instructions.txt  custom_gpt_response_templates.md  developer.md  devops_engineer.md  docker-compose.yml  download_ephemeris.ps1  download_ephemeris.sh  gpt.yaml  gunicorn.conf.py  implementation-plan.md  jai-vedic-astrology.gpt  jai_api_merged.md  main.py  openapi-schema.yaml  product_owner.md  project_manager.md  pyproject.toml  pytest.ini  qa_engineer.md  render.yaml  requirements-dev.txt  requirements.txt  run.py  scrum_master.md  sdlc_roles_index.md  setup.cfg  solutions_architect.md  technical_writer.md  test_all.ps1  (+7 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
api/: __init__.py  main.py
api/constants/: nakshatras.py  planets.py  zodiac.py
api/models/: __init__.py  astrological.py  request.py  response.py
api/routes/: __init__.py  ascendant.py  horoscope.py  planets.py
api/services/: __init__.py  aspect_calculations.py  astrological_calculations.py  calculation.py  dasha_calculations.py  ephemeris_service.py  mock_swisseph.py  yoga_calculations.py
api/utils/: error_handling.py  input_parser.py  input_validation.py
cache/: geocode_cache.json  timezone_cache.json
constants/: __init__.py  ayanamsa.py  dasha_years.py  nakshatras.py  yogas.py  zodiac_signs.py
constants/divisional_mappings/: d1.py  d10.py  d12.py  d3.py  d4.py  d7.py  d9.py
docs/: ARCHITECTURE.md  ASTROLOGICAL_GLOSSARY.md  CODE_OF_CONDUCT.md  DEPLOYMENT.md  DEVELOPER_SETUP.md  EPHEMERIS_FILES.md  IMPLEMENTATION_PLAN.md  ROADMAP.md  TASKS.md  TESTING.md  USER_STORIES.md  gpt_integration_guide.md  openai_custom_gpt_integration.md
ephemeris/: se_placeholder.txt
examples/: flexible_input_example.md  gpt_integration_example.py  openai_custom_gpt_example.md  place_based_example.py
jai_api/: __init__.py  jai_api_spec_enriched.md  main.py  render.yaml  rules.md
jai_api/constants/: aspects.py  nakshatras.py  planets.py
jai_api/constants/divisional_mappings/: __init__.py  d2.py
jai_api/docker/: Dockerfile  docker-compose.yml
jai_api/docs/: ARCHITECTURE.md  DEVELOPER_SETUP.md
jai_api/models/: __init__.py  error_models.py  response_models.py
jai_api/routes/: __init__.py
jai_api/routes/v1/: divisional_chart.py  mahadasha.py  natal_chart.py
jai_api/services/: ascendant_service.py  aspect_service.py  divisional_chart_service.py  ephemeris_service.py  natal_chart_service.py
jai_api/tests/: test_ascendant_service.py  test_divisional_chart_service.py  test_mahadasha_service.py  test_natal_chart_service.py
jai_api/utils/: __init__.py  converters.py  custom_exceptions.py
models/: request_models.py
requirements/: base.txt  dev.txt
routes/: health.py
routes/v1/: __init__.py  ascendant.py  aspect.py  nakshatra.py  yoga.py
services/: __init__.py  mahadasha_service.py  nakshatra_service.py  yoga_service.py
tests/: README.md  __init__.py  conftest.py  rules.md  test_all.py  test_api.py  test_api_e2e.py  test_aspect_calculations.py  test_astrological_calculations.py  test_componentized.py  test_dasha_calculations.py  test_horoscope.py  test_input_validation.py  test_mock_swisseph.py  test_server_componentized.py  test_vedic_houses.py  test_yoga_calculations.py
utils/: __init__.py  error_handlers.py  logger.py  validators.py
